NewSPERepo-master/k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 31000  # Optional: only needed for minikube or similar environments
  selector:
    app: frontend
