NewSPERepo-master/k8s/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
spec:
  type: ClusterIP
  ports:
    - port: 3307
      targetPort: 3306
  selector:
    app: mysql
